# Exercises_Robotic_Virginia_Cavallaro

Exercise1/: README.md
Exercise1/devel/: .catkin
Exercise1/devel/.private/pub_sub/: .catkin  (+2 more)
Exercise1/launch/: launch.launch  launcher.launch
Exercise1/src/pub_sub/: CMakeLists.txt  package.xml
Exercise1/src/pub_sub_msg/: CMakeLists.txt  package.xml
Exercise2/: README.md
Exercise2/devel/: .catkin
Exercise2/src/fanuc_moveit_config/: .setup_assistant
Exercise2/src/tf_parser/: CMakeLists.txt
Exercise3/: README.md
Exercise3/devel/: .catkin
Exercise3/launch/: fk_launch.launch  ik_launch.launch
Exercise3/logs/kinematics_action/: build.cmake.001.log.stderr
Exercise3/src/fanuc_moveit_config_no_limit/: .setup_assistant  CMakeLists.txt
Exercise3/src/fanuc_moveit_config_no_limit/config/: fake_controllers.yaml  fanuc-rm20ia.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
Exercise3/src/fanuc_moveit_config_no_limit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  fanuc-rm20ia_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
Exercise3/src/forward_kinematic_srv/: CMakeLists.txt
Exercise3/src/forward_kinematics/: CMakeLists.txt
Exercise4/: README.md
Exercise4/devel/: .catkin
(+197 files in other folders)
